# islp

./: .pdm-python  README.md  ch4-logreg-default.ipynb  errata.csv  errata.html  errata.ipynb  pyproject.toml  scratch.ipynb  test.ipynb
Chapter04/slides/: exercises.typ  main.typ
Chapter05/: exercises.typ
notes/: islpnotes.aux  islpnotes.fdb_latexmk  islpnotes.fls  islpnotes.out  islpnotes.tex  islpnotes.xdv  sklearn.tex
notes/_minted-islpnotes/: 002F664618B339E5C3315EE730A2535D47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  005D44DDBA69A577FDB394CFD812C18C47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  01B9751717B9EC773EF165BCEADDA78A47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  06FC2EE2E3A601CA8D446A83F6A838C2D156FA46A921AFF5929BFD4CEE4AAB56.pygtex  07B41504764813554C37617FFC08F77F47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  0810D94F3C139B6A4B1E3EB71ABD6CD247151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  0CFA9F600839F57E90E5559B8EE5486447151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  0EE602FD200CCC0E26D7A43406EF9240D156FA46A921AFF5929BFD4CEE4AAB56.pygtex  0F9B70A1D96D197CE5C527F661A578ED47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  0FB1E47DB29DE4F31E2B726A664A988B47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  0FB4DA1150C1107719E40A25B0726CC1D156FA46A921AFF5929BFD4CEE4AAB56.pygtex  135F7C4E5C48328603568099E23ED83D47151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  15D68BDEC0EE82CB54C03E9CD93739D1D156FA46A921AFF5929BFD4CEE4AAB56.pygtex  1664AD3BEFF61B74DE4FD1407AF49932D156FA46A921AFF5929BFD4CEE4AAB56.pygtex  16F7381E2023A9B120A548545641535147151FFF48EDA6B832DC36D4F8B4A3C3.pygtex  (+127 more)
