
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "jupyterlab",
    "numpy==1.24.2",
    "scipy==1.11.1",
    "pandas==1.5.3",
    "lxml==4.9.3",
    "scikit-learn==1.3.0",
    "joblib==1.3.1",
    "statsmodels==0.14.0",
    "lifelines==0.27.7",
    "pygam==0.9.0",
    "l0bnb==1.0.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "pytorch-lightning==2.0.6",
    "torchinfo==1.8.0",
    "torchmetrics==1.0.1",
    "ISLP==0.3.19",
    "plotly",
    "seaborn",
    "matplotlib",
    "RISE",
    "notebook>=7.0.3",
    "html5lib>=1.1",
]
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

